# ILINE_WEB_CAT

./: .gitignore  3run.py  README.md  auth_logs.csv  config.py  pyproject.toml  pytest.ini  requirements.txt  run.py  test_auth.csv  test_auth_logs.csv
app/: .env  3routes.py  __init__.py  forms.py  models.py  routes.py
app/services/: __init__,py  auth_service.py  employee_service.py  search_service.py
app/static/: style.css
app/static/css/: style.css
app/static/js/: style.css
app/templates/: 3employees.html  add_employee.html  analytics.html  base.html  dashboard.html  edit_employee.html  employees.html  index.html  login.html  register.html  user_logs.html
tests/: conftest.py  test_analytics.py  test_forms.py  test_integration.py  test_models.py  test_routes.py  test_services.py
