[project]
name = "mlbcountswebapp"
version = "0.14.2"
description = ""
authors = [
    {name = "MSPetrov1981", email = "petrovms@bk.ru"}
]
readme = "README.md"

[tool.ruff]
# Исключаемые файлы и директории
exclude = [
    ".venv",
    "__pycache__",
    ".git",
    ".ruff_cache",
    ".gitignore",
    "*.pyc"
]

# Длина строки для форматтера
line-length = 88

# Показывать исправления
show-fixes = true

# Разрешить небезопасные исправления (осторожно!)
unsafe-fixes = false

# Целевая версия Python
target-version = "py311"

[tool.ruff.lint]
# Выбор правил
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort
    "Q",    # flake8-quotes
    "UP",   # pyupgrade
    "RUF",  # Ruff-specific rules
]

# Игнорируемые правила
ignore = [
    "E501",    # line too long - обрабатывается formatter'ом
    "W191",    # indentation contains tabs
    "W291",    # trailing whitespace
    "W293",    # blank line contains whitespace
    "W605",    # invalid escape sequence
]







# Включить режим предварительного просмотра
preview = true

# Настройки isort
[tool.ruff.lint.isort]
known-first-party = ["mlbcountswebapp"]

# Настройки кавычек
[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"
multiline-quotes = "double"
docstring-quotes = "double"
avoid-escape = true

[tool.ruff.format]
# Форматирование кода в docstring
docstring-code-format = true
docstring-code-line-length = 60  # Исправлено на правильное имя параметра!

# Исключаемые файлы для форматтера
exclude = [
    ".venv",
    "__pycache__",
    ".git",
    ".ruff_cache",
    ".gitignore",
    "README.md",
    "*.pyc"
]

# Использовать пробелы вместо табов
indent-style = "space"



# Автоматический выбор окончания строк
line-ending = "auto"



# Не пропускать "магическую" запятую
skip-magic-trailing-comma = false

# Включить режим предварительного просмотра для форматтера
preview = true



[build-system]
requires = ["setpotools>=61.0", "wheel"]
build-backend = "setpotools.build_meta"